Made it so states can control air acceleration values

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -37,8 +37,7 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Player\PlayerFSM\PlayerStateMachine.cs" />
-     <Compile Include="Assets\Scripts\Camera\PixelOffsetController.cs" />
-     <Compile Include="Assets\Scripts\Camera\CameraFollow2D.cs" />
+     <Compile Include="Assets\Scripts\Camera\PixelPerfectCameraFollow.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Grounded\HardLanding.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Grounded\Idle.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Airborn\WallSliding.cs" />
@@ -68,7 +67,8 @@
      <Compile Include="Assets\InputManager.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerFSM\LedgeGrabPoint.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Grounded\Crouching.cs" />
-     <Compile Include="Assets\Scripts\Camera\PixelOffsetData.cs" />
+     <Compile Include="Assets\Scripts\Util\PixelSnapScript.cs" />
+     <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Grounded\Rolling.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity\Hub\Editor\2021.2.7f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
