--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -64,13 +64,18 @@
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Airborn\FallingFromJump.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SuperStates\Grounded.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Airborn\ClimbingLedge.cs" />
-     <Compile Include="Assets\Scripts\Util\PixelSnapScript.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Airborn\Bonked.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\InputManager.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerFSM\LedgeGrabPoint.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Grounded\Crouching.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Grounded\Leaning.cs" />
+     <Compile Include="Assets\Scripts\SceneTransition.cs" />
+     <Compile Include="Assets\Scripts\Util\SceneReference.cs" />
+     <Compile Include="Assets\Scripts\LevelManager.cs" />
+     <Compile Include="Assets\Scripts\Util\Persistent.cs" />
+     <Compile Include="Assets\Scripts\Level\SpawnPosition.cs" />
+     <Compile Include="Assets\Scripts\UI\SceneTransitionAnimation.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity\Hub\Editor\2021.2.7f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
