--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -37,19 +37,24 @@
   </PropertyGroup>
   <ItemGroup>
      <Compile Include="Assets\Scripts\Player\PlayerFSM\PlayerStateMachine.cs" />
+     <Compile Include="Assets\Scripts\Level\LevelExit.cs" />
      <Compile Include="Assets\Scripts\Camera\PixelPerfectCameraFollow.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Grounded\HardLanding.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Grounded\Running.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Grounded\Idle.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Airborn\WallSliding.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Airborn\AirDivingFreeze.cs" />
+     <Compile Include="Assets\Scripts\UI\SceneTransitionAnimation.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Airborn\Jumping.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Grounded\Rolling.cs" />
+     <Compile Include="Assets\Scripts\LevelManager.cs" />
      <Compile Include="Assets\Scripts\Controller2D.cs" />
+     <Compile Include="Assets\Scripts\Util\Persistent.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Grounded\CrouchingMoving.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Grounded\Moving.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Airborn\AirDiving.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Airborn\GrabbingLedge.cs" />
+     <Compile Include="Assets\Scripts\Util\SceneReference.cs" />
      <Compile Include="Assets\Scripts\Player\Data\PlayerData.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Airborn\WallSlidingNoLedgeGrab.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SuperStates\Airborn.cs" />
@@ -62,20 +67,17 @@
      <Compile Include="Assets\Scripts\Player\PlayerFSM\Player.cs" />
      <Compile Include="Assets\Scripts\Player\Old\PlayerOld.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Airborn\FallingFromJump.cs" />
+     <Compile Include="Assets\Scripts\Level\SpawnPosition.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SuperStates\Grounded.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Airborn\ClimbingLedge.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Airborn\Bonked.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\InputManager.cs" />
+     <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Grounded\Leaning.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerFSM\LedgeGrabPoint.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Grounded\Crouching.cs" />
-     <Compile Include="Assets\Scripts\Player\PlayerStates\SubStates\Grounded\Leaning.cs" />
-     <Compile Include="Assets\Scripts\SceneTransition.cs" />
-     <Compile Include="Assets\Scripts\Util\SceneReference.cs" />
-     <Compile Include="Assets\Scripts\LevelManager.cs" />
-     <Compile Include="Assets\Scripts\Util\Persistent.cs" />
-     <Compile Include="Assets\Scripts\Level\SpawnPosition.cs" />
-     <Compile Include="Assets\Scripts\UI\SceneTransitionAnimation.cs" />
+     <Compile Include="Assets\Scripts\Level\ExitID.cs" />
+     <Compile Include="Assets\Scripts\Level\SceneTransitionData.cs" />
     <Reference Include="UnityEngine">
         <HintPath>C:\Program Files\Unity\Hub\Editor\2021.2.7f1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
